--- a/index.html
+++ b/index.html
@@ -9,18 +9,28 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    <header id = "header">
+      <img id ="header-img" src="src/logo.jpg">
+  
+    <nav id ="nav-bar">
+        <ul>
+            <li> <a href="#">Menu</a> </li>
+            <li> <a href="#">about</a></li>
+            <li> <a href="#">Help</a></li>
+        </ul>  
+  </nav>
+  </header>
+  <body>
+      <div id="video">
+          <video href="https://youtu.be/y8Yv4pnO7qc"></video>
+      </div>
+      <div id ="form">
+          <label for="email"> please enter your email here (required)</label>
+          <input id="email" name="useremail" required placeholder="enetr your emial here">
+          <a href= "https://www.freecodecamp.com/email-submit)."> Submit</a>
+  
+      </div>
+  
     <script  src="js/index.js"></script>
   </body>
 </html>
