--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <header id = "header">
-      <img id ="header-img" src="src/logo.jpg">
+      <img id ="header-img" src="src/logo.png">
   
     <nav id ="nav-bar">
         <ul>
